Fixed Parcel SASS build flags

--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "ready": "yarn sass && yarn grunt && yarn lint-full && yarn test",
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
-    "sass": "rimraf 'dist' && parcel build --target sass --no-autoinstall",
-    "sass:watch": "rimraf 'dist' && parcel watch --target sass",
+    "sass": "rimraf 'dist' && parcel build --target sass --no-autoinstall --no-cache",
+    "sass:watch": "rimraf 'dist' && parcel watch --target sass --no-autoinstall --no-cache",
     "parcel-util-worker": "rimraf ts/webworker/workers/util.worker.js && parcel build --target util-worker --no-autoinstall --no-cache"
   },
   "dependencies": {
