fix: build do not add files in linux, win and mac dist/subfolders

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "targets": {
     "sass": {
       "source": "stylesheets/manifest.scss",
-      "distDir": "dist",
+      "distDir": "stylesheets/dist/",
       "optimize": true,
       "sourceMap": true
     },
@@ -73,8 +73,8 @@
     "ready": "yarn sass && yarn grunt && yarn lint-full && yarn test",
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
-    "sass": "rimraf 'dist' && parcel build --target sass --no-autoinstall --no-cache",
-    "sass:watch": "rimraf 'dist' && parcel watch --target sass --no-autoinstall --no-cache",
+    "sass": "rimraf 'stylesheets/dist/' && parcel build --target sass --no-autoinstall --no-cache",
+    "sass:watch": "rimraf 'stylesheets/dist/' && parcel watch --target sass --no-autoinstall --no-cache",
     "parcel-util-worker": "rimraf ts/webworker/workers/util.worker.js && parcel build --target util-worker --no-autoinstall --no-cache",
     "rebuild-curve25519-js": "cd node_modules/curve25519-js && yarn install && yarn build && cd ../../"
   },
@@ -306,7 +306,6 @@
       "package.json",
       "config/default.json",
       "config/${env.SIGNAL_ENV}.json",
-      "config/local-${env.SIGNAL_ENV}.json",
       "background.html",
       "about.html",
       "password.html",
@@ -317,9 +316,9 @@
       "js/**",
       "ts/**/*.js",
       "ts/*.js",
-      "dist/**",
+      "!dist/**",
+      "stylesheets/dist/*",
       "!js/register.js",
-      "js/views/standalone_registration_view.js",
       "preload.js",
       "about_preload.js",
       "settings_preload.js",
@@ -341,12 +340,29 @@
       "!node_modules/emoji-datasource-apple/img/apple/{sheets-128,sheets-256}/*.png",
       "!node_modules/emoji-datasource-apple/img/apple/sheets/{16,20,32}.png",
       "!node_modules/spellchecker/vendor/hunspell/**/*",
+      "!node_modules/@iconify/icons-mdi/*",
+      "node_modules/@iconify/icons-mdi/play-circle*",
+      "node_modules/@iconify/icons-mdi/pause-circle*",
+      "node_modules/@iconify/icons-mdi/skip-previous*",
+      "node_modules/@iconify/icons-mdi/skip-next*",
+      "node_modules/@iconify/icons-mdi/fast-forward*",
+      "node_modules/@iconify/icons-mdi/rewind*",
+      "node_modules/@iconify/icons-mdi/volume-high*",
+      "node_modules/@iconify/icons-mdi/volume-mute*",
+      "node_modules/@iconify/icons-mdi/repeat*",
+      "node_modules/@iconify/icons-mdi/repeat-off*",
+      "!node_modules/lamejs/testdata/*",
+      "!node_modules/@reduxjs/**/*",
+      "node_modules/@reduxjs/**/*.js",
+      "node_modules/@reduxjs/toolkit/package.json",
       "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme,test,__tests__,tests,powered-test,example,examples,*.d.ts}",
       "!**/node_modules/.bin",
       "!**/node_modules/*/build/**",
       "!**/*.{o,hprof,orig,pyc,pyo,rbc}",
       "!**/._*",
       "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,__pycache__,thumbs.db,.gitignore,.gitattributes,.editorconfig,.flowconfig,.yarn-metadata.json,.idea,appveyor.yml,.travis.yml,circle.yml,npm-debug.log,,yarn.lock,.yarn-integrity,.map}",
+      "!**/*.js.map",
+      "!**/*.ts",
       "node_modules/spellchecker/build/Release/*.node",
       "node_modules/websocket/build/Release/*.node",
       "node_modules/socks/build/*.js",
@@ -355,9 +371,6 @@
       "node_modules/smart-buffer/build/*.js",
       "node_modules/react-draggable/build/cjs/*.js",
       "node_modules/react-draggable/build/cjs/utils/*.js",
-      "!node_modules/@journeyapps/sqlcipher/deps/*",
-      "!node_modules/@journeyapps/sqlcipher/build/*",
-      "!node_modules/@journeyapps/sqlcipher/lib/binding/node-*",
       "!build/*.js",
       "build/afterPackHook.js",
       "build/launcher-script.sh",
