--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
     "coverage": "nyc --reporter=html mocha  -r jsdom-global/register --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\"",
     "lint-full": "yarn format-full && eslint . && tslint --format stylish --project .",
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
-    "transpile": "yarn tsc && yarn parcel-util-worker",
+    "transpile": "yarn tsc && yarn parcel-util-worker && yarn sass",
     "transpile:watch": "yarn grunt --force; tsc -w",
     "integration-test": "npx playwright test",
     "integration-test-snapshots": "npx playwright test -g 'profile picture' --update-snapshots",
     "clean-transpile": "rimraf 'ts/**/*.js' 'ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
-    "ready": "yarn sass && yarn grunt && yarn lint-full && yarn test",
+    "ready": "yarn grunt && yarn lint-full && yarn test",
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "sass": "rimraf 'stylesheets/dist/' && parcel build --target sass --no-autoinstall --no-cache",
@@ -79,6 +79,7 @@
     "rebuild-curve25519-js": "cd node_modules/curve25519-js && yarn install && yarn build && cd ../../"
   },
   "dependencies": {
+    "@emoji-mart/data": "1.0.2",
     "@reduxjs/toolkit": "^1.4.0",
     "abort-controller": "3.0.0",
     "auto-bind": "^4.0.0",
@@ -99,7 +100,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-localshortcut": "^3.2.1",
     "electron-updater": "^4.2.2",
-    "emoji-mart": "^2.11.2",
+    "emoji-mart": "5.1.0",
     "filesize": "3.6.1",
     "firstline": "1.2.1",
     "fs-extra": "9.0.0",
@@ -164,7 +165,7 @@
     "@types/config": "0.0.34",
     "@types/dompurify": "^2.0.0",
     "@types/electron-localshortcut": "^3.1.0",
-    "@types/emoji-mart": "^2.11.3",
+    "@types/emoji-mart": "3.0.9",
     "@types/filesize": "3.6.0",
     "@types/firstline": "^2.0.2",
     "@types/fs-extra": "5.0.5",
@@ -329,16 +330,6 @@
       "sound/*",
       "build/assets",
       "node_modules/**",
-      "!node_modules/emoji-panel/dist/*",
-      "!node_modules/emoji-panel/lib/emoji-panel-emojione-*.css",
-      "!node_modules/emoji-panel/lib/emoji-panel-google-*.css",
-      "!node_modules/emoji-panel/lib/emoji-panel-twitter-*.css",
-      "!node_modules/emoji-panel/lib/emoji-panel-apple-{16,20,64}.css",
-      "!node_modules/emoji-datasource/emoji_pretty.json",
-      "!node_modules/emoji-datasource/*.png",
-      "!node_modules/emoji-datasource-apple/emoji_pretty.json",
-      "!node_modules/emoji-datasource-apple/img/apple/{sheets-128,sheets-256}/*.png",
-      "!node_modules/emoji-datasource-apple/img/apple/sheets/{16,20,32}.png",
       "!node_modules/spellchecker/vendor/hunspell/**/*",
       "!node_modules/@iconify/icons-mdi/*",
       "node_modules/@iconify/icons-mdi/play-circle*",
