fix: rerender loop of react list modal
update redux related libraries
and update imports to use the RTK ones

--- a/package.json
+++ b/package.json
@@ -78,13 +78,12 @@
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "ready": "yarn build-everything && yarn lint-full && yarn test",
-
     "postinstall": "yarn patch-package && yarn electron-builder install-app-deps && yarn rebuild-curve25519-js",
     "rebuild-curve25519-js": "cd node_modules/curve25519-js && yarn install && yarn build && cd ../../"
   },
   "dependencies": {
     "@emoji-mart/data": "1.0.2",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "1.8.5",
     "abort-controller": "3.0.0",
     "auto-bind": "^4.0.0",
     "backbone": "1.3.3",
@@ -137,16 +136,15 @@
     "react-mentions": "^4.2.0",
     "react-portal": "^4.2.0",
     "react-qr-svg": "^2.2.1",
-    "react-redux": "7.2.1",
+    "react-redux": "8.0.4",
     "react-toastify": "^6.0.9",
     "react-use": "^17.2.1",
     "react-virtualized": "9.22.3",
     "read-last-lines-ts": "^1.2.1",
-    "redux": "4.0.1",
+    "redux": "4.2.0",
     "redux-logger": "3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
-    "reselect": "4.0.0",
     "rimraf": "2.6.2",
     "sanitize.css": "^12.0.1",
     "semver": "5.4.1",
@@ -186,7 +184,7 @@
     "@types/react-mentions": "^4.1.1",
     "@types/react-mic": "^12.4.1",
     "@types/react-portal": "^4.0.2",
-    "@types/react-redux": "7.1.9",
+    "@types/react-redux": "^7.1.24",
     "@types/react-virtualized": "9.18.12",
     "@types/redux-logger": "3.0.7",
     "@types/rimraf": "2.0.2",
