Fix .deb Section
Currently the deb has `Section: default`, which isn't a valid debian
section at all; this fixes it to be `net` to properly categorize it in
deb package managers.

--- a/package.json
+++ b/package.json
@@ -306,7 +306,8 @@
         "libnss3",
         "libasound2",
         "libxss1"
-      ]
+      ],
+      "packageCategory": "net"
     },
     "files": [
       "package.json",
