--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
       "sourceMap": true
     },
     "util-worker": {
-      "source": "ts/webworker/workers/util/util.worker.ts",
+      "source": "ts/webworker/workers/node/util/util.worker.ts",
       "distDir": "./ts/webworker/workers/",
       "optimize": true,
-      "sourceMap": false,
+      "sourceMap": true,
       "context": "web-worker"
     }
   },
@@ -232,12 +232,14 @@
     "run-script-os": "^1.1.6",
     "sinon": "9.0.2",
     "stream-browserify": "^3.0.0",
-    "ts-loader": "^9.2.8",
+    "ts-loader": "^9.4.2",
     "ts-mock-imports": "^1.3.0",
     "tslint": "5.19.0",
     "tslint-microsoft-contrib": "6.0.0",
     "tslint-react": "3.6.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "engines": {
     "node": "16.13.0"
