--- a/package.json
+++ b/package.json
@@ -19,13 +19,6 @@
       "distDir": "stylesheets/dist/",
       "optimize": true,
       "sourceMap": true
-    },
-    "util-worker": {
-      "source": "ts/webworker/workers/node/util/util.worker.ts",
-      "distDir": "./ts/webworker/workers/",
-      "optimize": true,
-      "sourceMap": true,
-      "context": "web-worker"
     }
   },
   "resolutions": {
@@ -46,13 +39,12 @@
   },
   "scripts": {
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
-    "build-everything": "yarn clean && yarn protobuf && grunt && yarn sass && tsc && yarn parcel-util-worker",
-    "build-everything:watch": "yarn clean && yarn protobuf && grunt && yarn sass && yarn parcel-util-worker && tsc -w",
+    "build-everything": "yarn clean && yarn protobuf && grunt && yarn sass && tsc && yarn worker:utils && yarn worker:libsession",
+    "build-everything:watch": "yarn clean && yarn protobuf && grunt && yarn sass && yarn worker:utils && yarn worker:libsession && tsc -w",
     "watch": "yarn clean && yarn protobuf && grunt && concurrently 'yarn build-everything:watch' 'yarn sass:watch'",
     "protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "sass": "rimraf 'stylesheets/dist/' && parcel build --target sass --no-autoinstall --no-cache",
     "sass:watch": "rimraf 'stylesheets/dist/' && parcel watch --target sass --no-autoinstall --no-cache",
-    "parcel-util-worker": "rimraf ts/webworker/workers/util.worker.js && parcel build --target util-worker --no-autoinstall --no-cache",
     "clean": "rimraf 'ts/**/*.js' 'ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
     "lint-full": "yarn format-full && eslint . && tslint --format stylish --project .",
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
@@ -75,7 +67,9 @@
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "ready": "yarn build-everything && yarn lint-full && yarn test",
     "postinstall": "yarn patch-package && yarn electron-builder install-app-deps && yarn rebuild-curve25519-js",
-    "rebuild-curve25519-js": "cd node_modules/curve25519-js && yarn install && yarn build && cd ../../"
+    "rebuild-curve25519-js": "cd node_modules/curve25519-js && yarn install && yarn build && cd ../../",
+    "worker:utils": "webpack  --config=./utils.worker.config.js",
+    "worker:libsession": "webpack  --config=./libsession.worker.config.js"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.0.6",
@@ -197,7 +191,7 @@
     "chai-bytes": "^0.1.2",
     "concurrently": "^7.4.0",
     "cross-env": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.7.2",
     "electron": "^17.2.0",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
@@ -209,6 +203,7 @@
     "eslint-plugin-mocha": "^10.0.4",
     "eslint-plugin-more": "^1.0.5",
     "events": "^3.3.0",
+    "file-loader": "^6.2.0",
     "grunt": "1.5.3",
     "grunt-cli": "1.4.3",
     "grunt-contrib-concat": "2.1.0",
@@ -224,14 +219,15 @@
     "nyc": "^15.1.0",
     "parcel": "2.5.0",
     "patch-package": "^6.4.7",
-    "path-browserify": "^1.0.1",
     "playwright": "1.16.3",
+    "postcss-loader": "^7.0.2",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
     "process": "^0.11.10",
     "run-script-os": "^1.1.6",
+    "sass-loader": "^13.2.0",
     "sinon": "9.0.2",
-    "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-mock-imports": "^1.3.0",
     "tslint": "5.19.0",
