fix: updated electron-builder dmg-builder dep to fix building on macos
from macos 12.3 python2 support has been dropped. Due to type issues we cant upgrade electron-builder  for python3 support so we just updated the dmg-builder package

--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
     "concurrently": "^7.4.0",
     "cross-env": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dmg-builder": "23.6.0",
     "electron": "^17.2.0",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
