--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "filesize": "3.6.1",
     "firstline": "1.2.1",
     "fs-extra": "9.0.0",
+    "git": "^0.1.5",
     "glob": "7.1.2",
     "image-type": "^4.1.0",
     "ip2country": "1.0.1",
@@ -139,7 +140,7 @@
     "rimraf": "2.6.2",
     "sanitize.css": "^12.0.1",
     "semver": "5.4.1",
-    "session_util_wrapper": "https://github.com/oxen-io/libsession-util-nodejs",
+    "session_util_wrapper": "/home/audric/pro/contribs/libsession-util-nodejs",
     "styled-components": "5.1.1",
     "uuid": "8.3.2"
   },
@@ -289,7 +290,11 @@
         "StartupWMClass": "Session"
       },
       "asarUnpack": "node_modules/spellchecker/vendor/hunspell_dictionaries",
-      "target": ["deb", "rpm", "freebsd"],
+      "target": [
+        "deb",
+        "rpm",
+        "freebsd"
+      ],
       "icon": "build/icon-linux.icns"
     },
     "asarUnpack": [
