--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "ip2country": "1.0.1",
     "jsbn": "1.1.0",
     "libsodium-wrappers-sumo": "^0.7.9",
-    "linkify-it": "3.0.2",
+    "linkify-it": "^4.0.1",
     "lodash": "^4.17.20",
     "long": "^4.0.0",
     "mic-recorder-to-mp3": "^2.2.2",
@@ -178,7 +178,7 @@
     "@types/firstline": "^2.0.2",
     "@types/fs-extra": "5.0.5",
     "@types/libsodium-wrappers-sumo": "^0.7.5",
-    "@types/linkify-it": "2.0.3",
+    "@types/linkify-it": "^3.0.2",
     "@types/lodash": "4.14.106",
     "@types/mocha": "5.0.0",
     "@types/mustache": "^4.1.2",
