fix: test with libsession compiled with node-api

--- a/package.json
+++ b/package.json
@@ -107,7 +107,6 @@
     "mic-recorder-to-mp3": "^2.2.2",
     "moment": "^2.29.4",
     "mustache": "2.3.0",
-    "nan": "2.14.2",
     "node-fetch": "^2.6.7",
     "os-locale": "5.0.0",
     "p-retry": "^4.2.0",
@@ -184,6 +183,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
+    "cmake-js": "^7.2.1",
     "concurrently": "^7.4.0",
     "cross-env": "^6.0.3",
     "css-loader": "^6.7.2",
