chore: fetch latest archive from libsession nodejs git repo

--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "glob": "7.1.2",
     "image-type": "^4.1.0",
     "ip2country": "1.0.1",
-    "libsession_util_nodejs": "https://github.com/oxen-io/libsession-util-nodejs#3c206781fdc242aa1e4b03ff88c8ba501998dbff",
+    "libsession_util_nodejs": "https://github.com/oxen-io/libsession-util-nodejs/releases/download/v0.1.5/libsession_util_nodejs-v0.1.5.tar.gz",
     "libsodium-wrappers-sumo": "^0.7.9",
     "linkify-it": "3.0.2",
     "lodash": "^4.17.20",
@@ -202,6 +202,7 @@
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^2.7.5",
     "mocha": "10.0.0",
+    "nan": "^2.17.0",
     "node-gyp": "9.0.0",
     "node-loader": "^2.0.0",
     "nyc": "^15.1.0",
