--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "concurrently": "^7.4.0",
     "cross-env": "^6.0.3",
     "css-loader": "^6.7.2",
+    "dmg-builder": "23.6.0",
     "electron": "^17.2.0",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
