--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2022, macos-latest, ubuntu-20.04]
+        os: [windows-2022, macos-11, ubuntu-20.04]
     env:
       SIGNAL_ENV: production
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -40,7 +40,7 @@ jobs:
         if: runner.os == 'Windows'
         uses: crazy-max/ghaction-chocolatey@v1.4.2
         with:
-          args: install python2 visualcpp-build-tools -y
+          args: install python2 -y
 
       #Not having this will break the windows build because the PATH won't be set by msbuild.
       - name: Add msbuild to PATH
@@ -52,7 +52,7 @@ jobs:
         run: |
           npm install --global node-gyp@latest
           npm config set python python2.7
-          npm config set msvs_version 2017
+          npm config set msvs_version 2022
 
       - name: Install Desktop node_modules
         if: steps.cache-desktop-modules.outputs.cache-hit != 'true'
