chore: update lodash types, use prebuilt curbe25519-js

--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "ready": "yarn build-everything && yarn lint-full && yarn test",
-    "postinstall": "yarn patch-package && yarn electron-builder install-app-deps && yarn rebuild-curve25519-js",
-    "rebuild-curve25519-js": "cd node_modules/curve25519-js && yarn install && yarn build && cd ../../",
+    "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
     "update-git-info": "node ./build/updateLocalConfig.js",
     "worker:utils": "webpack  --config=./utils.worker.config.js",
     "worker:libsession": "rimraf 'ts/webworker/workers/node/libsession/*.node' && webpack  --config=./libsession.worker.config.js"
@@ -104,7 +103,7 @@
     "libsession_util_nodejs": "https://github.com/oxen-io/libsession-util-nodejs/releases/download/v0.1.15/libsession_util_nodejs-v0.1.15.tar.gz",
     "libsodium-wrappers-sumo": "^0.7.9",
     "linkify-it": "3.0.2",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "long": "^4.0.0",
     "mic-recorder-to-mp3": "^2.2.2",
     "moment": "^2.29.4",
@@ -161,7 +160,7 @@
     "@types/fs-extra": "5.0.5",
     "@types/libsodium-wrappers-sumo": "^0.7.5",
     "@types/linkify-it": "2.0.3",
-    "@types/lodash": "4.14.106",
+    "@types/lodash": "^4.14.194",
     "@types/mocha": "5.0.0",
     "@types/mustache": "^4.1.2",
     "@types/node-fetch": "^2.5.7",
