fix: use existing enhance label insteaf of feature-request

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: 🚀 Feature request
 description: Suggest an idea for Session
 title: '[Feature] <title>'
-labels: [feature-request]
+labels: [enhancement]
 body:
   - type: checkboxes
     attributes:
