chore: add unstable to gh actions build and test

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches:
       - clearnet
+      - unstable
   pull_request:
     branches:
       - clearnet
+      - unstable
 
 jobs:
   build:
