--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build-everything": "yarn clean && yarn protobuf && yarn update-git-info && yarn sass && tsc && yarn build:workers",
     "build-everything:watch": "yarn clean && yarn protobuf && yarn update-git-info && yarn sass && yarn build:workers && tsc -w",
     "build:workers": "yarn worker:utils && yarn worker:libsession",
-    "watch": "yarn clean && yarn protobuf && yarn update-git-info && concurrently 'yarn build-everything:watch'",
+    "watch": "yarn clean && yarn protobuf && yarn update-git-info && yarn build-everything:watch",
     "protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "sass": "rimraf 'stylesheets/dist/' && webpack  --config=./sass.config.js",
     "clean": "rimraf 'ts/**/*.js' 'ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
@@ -47,10 +47,8 @@
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
     "integration-test": "npx playwright test",
     "start-prod-test": "cross-env NODE_ENV=production NODE_APP_INSTANCE=$MULTI electron .",
-
     "integration-test-snapshots": "npx playwright test -g 'profile picture' --update-snapshots",
     "test": "mocha  -r jsdom-global/register --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\"",
-    "coverage": "nyc --reporter=html mocha  -r jsdom-global/register --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\"",
     "build-release": "run-script-os",
     "build-release-non-linux": "yarn build-everything && cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
     "build-release:win32": "yarn build-release-non-linux",
@@ -80,13 +78,11 @@
     "auto-bind": "^4.0.0",
     "backbone": "1.3.3",
     "blob-util": "2.0.2",
-    "blueimp-canvas-to-blob": "^3.29.0",
     "blueimp-load-image": "5.14.0",
     "buffer-crc32": "0.2.13",
     "bunyan": "^1.8.15",
     "bytebuffer": "^5.0.1",
     "classnames": "2.2.5",
-    "color": "^3.1.2",
     "config": "1.28.1",
     "country-code-lookup": "^0.0.19",
     "curve25519-js": "https://github.com/oxen-io/curve25519-js",
@@ -107,13 +103,11 @@
     "long": "^4.0.0",
     "mic-recorder-to-mp3": "^2.2.2",
     "moment": "^2.29.4",
-    "mustache": "2.3.0",
     "node-fetch": "^2.6.7",
     "os-locale": "5.0.0",
     "p-retry": "^4.2.0",
     "pify": "3.0.0",
     "protobufjs": "^6.11.2",
-    "queue-promise": "^2.2.1",
     "rc-slider": "^8.7.1",
     "react": "^17.0.2",
     "react-contexify": "5.0.0",
@@ -122,7 +116,6 @@
     "react-h5-audio-player": "^3.2.0",
     "react-intersection-observer": "^8.30.3",
     "react-mentions": "^4.4.9",
-    "react-portal": "^4.2.0",
     "react-qr-svg": "^2.2.1",
     "react-redux": "8.0.4",
     "react-toastify": "^6.0.9",
@@ -150,7 +143,6 @@
     "@types/chai": "4.2.18",
     "@types/chai-as-promised": "^7.1.2",
     "@types/classnames": "2.2.3",
-    "@types/color": "^3.0.0",
     "@types/config": "0.0.34",
     "@types/dompurify": "^2.0.0",
     "@types/electron-localshortcut": "^3.1.0",
@@ -161,14 +153,11 @@
     "@types/linkify-it": "^3.0.2",
     "@types/lodash": "^4.14.194",
     "@types/mocha": "5.0.0",
-    "@types/mustache": "^4.1.2",
     "@types/node-fetch": "^2.5.7",
     "@types/pify": "3.0.2",
     "@types/rc-slider": "^8.6.5",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "@types/react-mic": "^12.4.1",
-    "@types/react-portal": "^4.0.2",
     "@types/react-redux": "^7.1.24",
     "@types/react-virtualized": "9.18.12",
     "@types/redux-logger": "3.0.7",
@@ -180,18 +169,14 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "asar": "3.1.0",
-    "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
-    "cmake-js": "^7.2.1",
-    "concurrently": "^7.4.0",
     "cross-env": "^6.0.3",
     "css-loader": "^6.7.2",
     "dmg-builder": "23.6.0",
     "electron": "25.3.0",
     "electron-builder": "23.0.8",
-    "esbuild": "^0.14.29",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
@@ -201,30 +186,23 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "events": "^3.3.0",
-    "jsdom": "^19.0.0",
+    "jsdom": "^22.1.0",
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^2.7.5",
     "mocha": "10.0.0",
-    "nan": "^2.17.0",
-    "node-gyp": "9.0.0",
     "node-loader": "^2.0.0",
-    "nyc": "^15.1.0",
     "patch-package": "^6.4.7",
     "playwright": "1.16.3",
-    "postcss-loader": "^7.0.2",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
-    "process": "^0.11.10",
     "run-script-os": "^1.1.6",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "sinon": "9.0.2",
-    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "ts-mock-imports": "^1.3.0",
     "typescript": "^5.1.6",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": "18.15.0"
