fix: finish updating dependencies

--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "p-retry": "^4.2.0",
     "pify": "3.0.0",
     "protobufjs": "^6.11.2",
-    "rc-slider": "^8.7.1",
+    "rc-slider": "^10.2.1",
     "react": "^17.0.2",
     "react-contexify": "5.0.0",
     "react-dom": "^17.0.2",
@@ -119,8 +119,8 @@
     "react-qr-svg": "^2.2.1",
     "react-redux": "8.0.4",
     "react-toastify": "^6.0.9",
-    "react-use": "^17.2.1",
-    "react-virtualized": "9.22.3",
+    "react-use": "^17.4.0",
+    "react-virtualized": "^9.22.4",
     "read-last-lines-ts": "^1.2.1",
     "redux": "4.2.0",
     "redux-logger": "3.0.6",
@@ -130,7 +130,8 @@
     "sanitize.css": "^12.0.1",
     "semver": "5.4.1",
     "styled-components": "5.1.1",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "webrtc-adapter": "^4.1.1"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
@@ -155,7 +156,6 @@
     "@types/mocha": "5.0.0",
     "@types/node-fetch": "^2.5.7",
     "@types/pify": "3.0.2",
-    "@types/rc-slider": "^8.6.5",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.24",
@@ -168,7 +168,6 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
-    "asar": "3.1.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
@@ -339,9 +338,12 @@
       "!build/*.js",
       "build/afterPackHook.js",
       "build/launcher-script.sh",
-      "!node_modules/better-sqlite3/deps/*",
-      "!node_modules/better-sqlite3/src/*",
-      "node_modules/better-sqlite3/build/Release/better_sqlite3.node",
+      "!node_modules/@signalapp/better-sqlite3/deps/*",
+      "!node_modules/@signalapp/better-sqlite3/src/*",
+      "!node_modules/@signalapp/better-sqlite3/build/Release/obj/*",
+      "node_modules/@signalapp/better-sqlite3/build/Release/better_sqlite3.node",
+      "!node_modules/libsession_util_nodejs/libsession-util/*",
+      "!node_modules/libsession_util_nodejs/src/*",
       "ts/webworker/workers/node/libsession/*.node",
       "!dev-app-update.yml"
     ]
