chore: update pbjs package and make integration test more reliable

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "os-locale": "5.0.0",
     "p-retry": "^4.2.0",
     "pify": "3.0.0",
-    "protobufjs": "^6.11.2",
+    "protobufjs": "^7.2.4",
     "rc-slider": "^10.2.1",
     "react": "^17.0.2",
     "react-contexify": "5.0.0",
@@ -128,7 +128,7 @@
     "redux-promise-middleware": "^6.1.2",
     "rimraf": "2.6.2",
     "sanitize.css": "^12.0.1",
-    "semver": "5.4.1",
+    "semver": "^7.5.4",
     "styled-components": "5.1.1",
     "uuid": "8.3.2",
     "webrtc-adapter": "^4.1.1"
@@ -194,6 +194,7 @@
     "playwright": "1.16.3",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
+    "protobufjs-cli": "^1.1.1",
     "run-script-os": "^1.1.6",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
