chore: share gh actions logic between workflows

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,36 +28,7 @@ jobs:
       - name: Checkout git repo
         uses: actions/checkout@v3
 
-      # we stay on v2 even if there is a v3 because the v3 logic is less flexible for our usecase
-      - name: Install node
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Cache Desktop node_modules
-        id: cache-desktop-modules
-        uses: actions/cache@v3
-        if: runner.os != 'Windows'
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('package.json', 'yarn.lock', 'patches/**') }}
-
-      #Not having this will break the windows build because the PATH won't be set by msbuild.
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.3.1
-        if: runner.os == 'Windows'
-
-      - name: Setup node for windows
-        if: runner.os == 'Windows'
-        run: |
-          npm install --global node-gyp@latest
-
-      - name: Install Desktop node_modules
-        if: steps.cache-desktop-modules.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile --network-timeout 600000 --force
-
-      - name: Generate and concat files
-        run: yarn build-everything
+      - uses: ./actions/setup_and_build
 
       - name: Lint Files
         # no need to lint files on all platforms. Just do it once on the quicker one
