--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "auto-bind": "^4.0.0",
     "backbone": "1.3.3",
     "blob-util": "2.0.2",
-    "blueimp-load-image": "5.14.0",
+    "blueimp-load-image": "^5.16.0",
     "buffer-crc32": "0.2.13",
     "bunyan": "^1.8.15",
     "bytebuffer": "^5.0.1",
@@ -134,7 +134,7 @@
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
     "@types/backbone": "1.4.2",
-    "@types/blueimp-load-image": "5.14.4",
+    "@types/blueimp-load-image": "^5.16.2",
     "@types/buffer-crc32": "^0.2.0",
     "@types/bunyan": "^1.8.8",
     "@types/bytebuffer": "^5.0.41",
