fix: update db and usage

--- a/package.json
+++ b/package.json
@@ -353,7 +353,7 @@
       "!dev-app-update.yml"
     ],
     "extraFiles": [
-      "mmdb/GeoLite2-City.mmdb"
+      "mmdb/GeoLite2-Country.mmdb"
     ]
   }
 }
