--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "blob-util": "2.0.2",
     "blueimp-load-image": "5.14.0",
     "buffer-crc32": "0.2.13",
-    "bunyan": "^1.8.15",
+    "bunyan": "https://github.com/Bilb/node-bunyan",
     "bytebuffer": "^5.0.1",
     "classnames": "2.2.5",
     "config": "1.28.1",
