--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "semver": "^7.5.4",
     "styled-components": "5.1.1",
     "uuid": "8.3.2",
-    "webrtc-adapter": "^4.1.1"
+    "webrtc-adapter": "^4.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
