--- a/package.json
+++ b/package.json
@@ -178,7 +178,7 @@
     "dmg-builder": "23.6.0",
     "electron": "^25.8.4",
     "electron-builder": "23.0.8",
-    "eslint": "^8.45.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
