--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,2 +1,6 @@
+commit_message: "[CI SKIP]"
+files:
+  - source: _locales/en/messages.json
+    translation: _locales/%locale_with_underscore%/messages.json
 bundles:
   - 12
