--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,4 +1,4 @@
-commit_message: "[CI SKIP]"
+commit_message: '[CI SKIP]'
 files:
   - source: _locales/en/messages.json
     translation: _locales/%locale_with_underscore%/messages.json
