--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   "scripts": {
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
     "start-dev": "cross-env NODE_ENV=development NODE_APP_INSTANCE=devprod$MULTI electron .",
-    "build-everything": "yarn clean && yarn protobuf && yarn update-git-info && yarn sass && tsc && yarn build:workers",
-    "build-everything:watch": "yarn clean && yarn protobuf && yarn update-git-info && yarn sass && yarn build:workers && tsc -w",
+    "build-everything": "yarn clean && yarn protobuf && yarn update-git-info && yarn sass && build:locales && tsc && yarn build:workers",
+    "build-everything:watch": "yarn clean && yarn protobuf && yarn update-git-info && yarn sass &&build:locales && yarn build:workers && concurrently \"tsc -w\" \"yarn build-watch:locales\"",
     "build:workers": "yarn worker:utils && yarn worker:libsession",
+    "build:locales": "python3 ./tools/localization/generateLocales.py --print-problems --error-on-problems --error-old-dynamic-variables",
+    "build-watch:locales": "nodemon --watch _locales/en/messages.json --exec \"yarn build:locales\"",
     "watch": "yarn clean && yarn protobuf && yarn update-git-info && yarn build-everything:watch",
     "protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "sass": "rimraf 'stylesheets/dist/' && webpack  --config=./sass.config.js",
@@ -173,6 +175,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
+    "concurrently": "^8.2.2",
     "cross-env": "^6.0.3",
     "css-loader": "^6.7.2",
     "dmg-builder": "23.6.0",
@@ -195,6 +198,7 @@
     "mini-css-extract-plugin": "^2.7.5",
     "mocha": "10.0.0",
     "node-loader": "^2.0.0",
+    "nodemon": "^3.1.0",
     "patch-package": "^6.4.7",
     "postinstall-prepare": "^1.0.1",
     "prettier": "3.2.5",
